[tool.poetry]
name = "src"
version = "0.1.0"
packages = [{ include = "src" }]
description = "Powered by Langchain and FastAPI"
authors = ["Victor <vtorrealbalp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
langchain-core = "^0.2.10"
langsmith = "^0.1.82"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.10"
langgraph = "^0.1.4"
ipython = "^8.26.0"
langchain-anthropic = "^0.1.17"
langchainhub = "^0.1.20"
twilio = "^9.2.3"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
pyngrok = "^7.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



